# neoutils

./: .gitignore  README.md  main.py  methods.tex  notas.md  pyproject.toml  requirements.txt  setup.py
neoutils/: __init__.py  equations.py  numerics.py  utils.py
